# libuv

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
.claude/rules/: cpp-patterns.md  md-patterns.md
cmake/: FetchLibuv.cmake
config/: uvx.yaml
src/bench_client/: CMakeLists.txt  main.cpp
src/common/: log.hpp  uv_check.hpp
src/echo_client/: CMakeLists.txt  main.cpp
src/echo_server/: CMakeLists.txt  main.cpp
src/uvx/bench/: runner.hpp
src/uvx/core/: config.hpp
src/uvx/net/: connection.hpp  multi_reactor.hpp  transferable_socket.hpp
